Don't hold softc lock when calling ucom_read

PR/51714: uftdi (on xhci): mutex_vector_enter: locking against myself