sys/dev/usb/ucom.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: ucom.c,v 1.117 2016/12/04 10:12:35 skrll Exp $	*/
+/*	$NetBSD: ucom.c,v 1.118 2016/12/14 15:11:29 skrll Exp $	*/
 
 /*
  * Copyright (c) 1998, 2000 The NetBSD Foundation, Inc.
@@ -34,7 +34,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: ucom.c,v 1.117 2016/12/04 10:12:35 skrll Exp $");
+__KERNEL_RCSID(0, "$NetBSD: ucom.c,v 1.118 2016/12/14 15:11:29 skrll Exp $");
 
 #ifdef _KERNEL_OPT
 #include "opt_usb.h"
@@ -1608,6 +1608,7 @@ ucomreadcb(struct usbd_xfer *xfer, void *p, usbd_status status)
 		return;
 	}
 
+	mutex_exit(&sc->sc_lock);
 	if (sc->sc_methods->ucom_read != NULL) {
 		sc->sc_methods->ucom_read(sc->sc_parent, sc->sc_portno,
 		    &cp, &cc);
@@ -1616,6 +1617,15 @@ ucomreadcb(struct usbd_xfer *xfer, void *p, usbd_status status)
 		ub->ub_index = 0;
 
 	ub->ub_len = cc;
+
+	mutex_enter(&sc->sc_lock);
+	if (sc->sc_dying) {
+		if (--sc->sc_refcnt < 0)
+			cv_broadcast(&sc->sc_detachcv);
+		mutex_exit(&sc->sc_lock);
+		DPRINTF("... dying", 0, 0, 0, 0);
+		return;
+	}
 
 	SIMPLEQ_INSERT_TAIL(&sc->sc_ibuff_full, ub, ub_link);
 
